se crean archivos html para el frontend

--- a/FRONT/INDEX.HTML
+++ b/FRONT/INDEX.HTML
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilos.css">
-    <title>Macota Feliz</title>
-
+    <title>Macota Feliz APP</title>
 </head>
 
 <body>
     <div class="banner">
         <nav>
-            <img src="../FRONT/imgs/logo1.png" alt="logo" class="logo">
+            <img src="../FRONT/imgs/logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">SERVICIOS</a></li>
+                <li><a href="#">INFORMACION</a></li>
                 <li><a href="#">CONTACTO</a></li>
                 <li><a href="#">REGISTRO</a></li>
             </ul>
