--- a/FRONT/VeterinarioView/RegistroVeterinario.html
+++ b/FRONT/VeterinarioView/RegistroVeterinario.html
@@ -18,15 +18,8 @@
             <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellidos">
             <input class="controls" type="text" name="direccion" id="direccion" placeholder="Dirección Vivienda">
             <input class="controls" type="text" name="telefono" id="telefono" placeholder="Teléfono">
-            <input class="controls" type="text" name="telefono" id="telefono" placeholder="Tarjeta Profesional">
-                <!-- <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span> -->
+            <input class="controls" type="text" name="tarjeta" id="tarjeta" placeholder="Tarjeta Profesional">
             <input class="boton" type="submit" value="Registrar">
-            <!-- </a> -->
-            
         </div>
     </section>
 </body>
