modifica vista registro mascota

--- a/FRONT/MascotaView/RegistroMascota.html
+++ b/FRONT/MascotaView/RegistroMascota.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilos.css">
-    <title>Registro Mascota</title>
+    <title>Registrar Mascota</title>
 
 </head>
 
 <body>
     <section class="registro">
         <div class="formulario">
-            <h4>Registro de Mascota</h4>
+            <h4>Registrar Mascota</h4>
             <input class="controls" type="text" name="nombre" id="nombre" placeholder="Nombre Mascotita">
             <input class="controls" type="text" name="color" id="color" placeholder="Color">
             <input class="controls" type="text" name="especie" id="especie" placeholder="Especie">
