--- a/FRONT/MascotaView/RegistroMascota.html
+++ b/FRONT/MascotaView/RegistroMascota.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Estilos.css">
-    <title>Registrar Mascota</title>
-
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Pet Form</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-
 <body>
-    <section class="registro">
-        <div class="formulario">
-            <h4>Registrar Mascota</h4>
-            <input class="controls" type="text" name="nombre" id="nombre" placeholder="Nombre Mascotita">
-            <input class="controls" type="text" name="color" id="color" placeholder="Color">
-            <input class="controls" type="text" name="especie" id="especie" placeholder="Especie">
-            <input class="controls" type="text" name="raza" id="raza" placeholder="Raza">
-            <input class="boton" type="submit" value="Registrar">            
+    <div class="bg-image"></div>
+    <div class="signupFrm">
+        <div class="wrapper">
+            <form action="" class="form">
+                <h1 class="title">Registro Nueva Mascota</h1>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Nombre</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Color</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Especie</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Raza</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Dueño</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Veterinario</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Historia</label>
+                </div>
+                <input type="submit" class="submitBtn" value="Registrar">
+            </form>
         </div>
-    </section>
+    </div>
 </body>
 </html>
