--- a/FRONT/VeterinarioView/RegistroVeterinario.html
+++ b/FRONT/VeterinarioView/RegistroVeterinario.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Estilos.css">
-    <title>Registro Veterinario</title>
-
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Vet Form</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-
 <body>
-    <section class="registro">
-        <div class="formulario">
-            <h4>Registro Veterinario</h4>
-            <input class="controls" type="text" name="nombre" id="nombre" placeholder="Nombre">
-            <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellidos">
-            <input class="controls" type="text" name="direccion" id="direccion" placeholder="Dirección Vivienda">
-            <input class="controls" type="text" name="telefono" id="telefono" placeholder="Teléfono">
-            <input class="controls" type="text" name="tarjeta" id="tarjeta" placeholder="Tarjeta Profesional">
-            <input class="boton" type="submit" value="Registrar">
+    <div class="bg-image"></div>
+    <div class="signupFrm">
+        <div class="wrapper">
+            <form action="" class="form">
+                <h1 class="title">Registro Nuevo Veterinario</h1>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Nombres</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Apellidos</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Dirección</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Telefono</label>
+                </div>
+                <div class="inputContainer">
+                    <input type="text" class="input" placeholder="a">
+                    <label for="" class="label">Tarjeta Profesional</label>
+                </div>
+                <input type="submit" class="submitBtn" value="Registrar">
+            </form>
         </div>
-    </section>
+    </div>
 </body>
-
 </html>
