ad vista mascota

--- a/FRONT/MascotaView/ConsultaMascota.html
+++ b/FRONT/MascotaView/ConsultaMascota.html
@@ -24,50 +24,30 @@
                       <th>VETERINARIO</th>
                       <th>HISTORIA</th>
                     </tr>
-                    <tr>
-                      <td>Alfreds Futterkiste</td>
+                    <td>Max</td>
+                      <td>Perro</td>
+                      <td>Golden</td>
+                      <td>Dorado</td>
                       <td>Maria Anders</td>
-                      <td>Germany</td>
-                      <td>Alfreds Futterkiste</td>
-                      <td>Maria Anders</td>
-                      <td>Germany</td>
-                      <td>Germany</td>
-                    </tr>
+                      <td>Fernando Gomez</td>
+                      <td>25</td>
                     <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Germany</td>
+                        <td>Ambar</td>
+                        <td>Perro</td>
+                        <td>Pincher</td>
+                        <td>Negro</td>
+                        <td>Monica Andrea Sanchez</td>
+                        <td>Fernando Gomez</td>
+                        <td>26</td>
                       </tr>
                       <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Germany</td>
-                      </tr>
-                      <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Germany</td>
-                      </tr>
-                      <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Germany</td>
+                        <td>Rex</td>
+                        <td>Perro</td>
+                        <td>Pastor Aleman</td>
+                        <td>Negro</td>
+                        <td>Darwin Rodriguez</td>
+                        <td>Sandra Alejandra Rojas</td>
+                        <td>27</td>
                       </tr>
                   </table>
             </form>
