--- a/FRONT/MascotaView/ConsultarMascota.html
+++ b/FRONT/MascotaView/ConsultarMascota.html
@@ -12,8 +12,8 @@
     <div class="signupFrm">
         <div class="wrapper">
             <form action="" class="form">
-                <h1 class="title">Listado de Mascotas</h1>
-                <input type="submit" class="submitBtn" value="Listar Mascotas">
+                <h1 class="title">Consulta de Mascota</h1>
+                <input type="submit" class="submitBtn" value="Consulta de Mascota">
                 <table class="inputContainer">
                     <tr>
                       <th>NOMBRE</th>
@@ -25,13 +25,13 @@
                       <th>HISTORIA</th>
                     </tr>
                     <tr>
-                      <td>Alfreds Futterkiste</td>
+                      <td>Max</td>
+                      <td>Perro</td>
+                      <td>Golden</td>
+                      <td>Dorado</td>
                       <td>Maria Anders</td>
-                      <td>Germany</td>
-                      <td>Alfreds Futterkiste</td>
-                      <td>Maria Anders</td>
-                      <td>Germany</td>
-                      <td>Germany</td>
+                      <td>Fernando Gomez</td>
+                      <td>25</td>
                     </tr>
                   </table>
             </form>
